# eth-audit

./: Cargo.toml  README.md  findings.json
contracts/: SimpleToken.sol
eth-audit-cli/: Cargo.toml  README.md
eth-audit-cli/src/: main.rs
eth_audit_core/: Cargo.toml
eth_audit_core/src/: lib.rs  registry.rs  types.rs
eth_audit_integer_overflow/: Cargo.toml
eth_audit_integer_overflow/src/: lib.rs
eth_audit_reentrancy/: Cargo.toml
eth_audit_reentrancy/src/: lib.rs
eth_audit_unchecked_send/: Cargo.toml
eth_audit_unchecked_send/src/: lib.rs
